fix bug version mobile

--- a/src/utils/css/homepage.css
+++ b/src/utils/css/homepage.css
@@ -42,7 +42,7 @@
 }
 
 .container-on-video {
-  width: 75%;
+  width: 70%;
   max-width: 1440px;
   height: auto;
   display: flex;
@@ -173,7 +173,8 @@ span.paragraphe1 {
   width: 1870px;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px
 }
 
 .section-mission p{
